--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-htmlview",
-  "version": "0.12.0",
+  "name": "@realgeeks/react-native-htmlview",
+  "version": "0.12.1",
   "description": "A component which renders HTML content as native views",
   "main": "index.js",
   "scripts": {
@@ -39,11 +39,11 @@
     "mobile",
     "ui"
   ],
-  "homepage": "https://github.com/jsdf/react-native-htmlview",
-  "bugs": "https://github.com/jsdf/react-native-htmlview/issues",
+  "homepage": "https://github.com/realgeeks/react-native-htmlview",
+  "bugs": "https://github.com/realgeeks/react-native-htmlview/issues",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jsdf/react-native-htmlview.git"
+    "url": "git://github.com/realgeeks/react-native-htmlview.git"
   },
   "dependencies": {
     "entities": "^1.1.1",
